@@ -1,5 +1,6 @@
 0.5.3
  - fix: check disk usage before compressing data for upload
+ - ref: migrate favicon location to AppDataLocation
 0.5.2
  - enh: write the obtained dataset identifier to task files that
    were successfully imported
